changed nbsite version, travis_dev

--- a/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
+++ b/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
@@ -110,7 +110,7 @@
     }
    ],
    "source": [
-    "list(OSF_PATH.glob(\"**/*\"))"
+    "list(OSF_PATH.glob(\"*\"))"
    ]
   },
   {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -895,6 +895,87 @@
     ")\n",
     "agem"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys==Python BuiltIn\n",
+      "pandas==1.0.3\n",
+      "GSForge==0.5b1\n",
+      "types==unknown\n",
+      "pathlib==unknown\n",
+      "pkg_resources==unknown\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import pkg_resources\n",
+    "import types\n",
+    "\n",
+    "def get_imports():\n",
+    "    for name, val in globals().items():\n",
+    "        if isinstance(val, types.ModuleType):\n",
+    "            # Split ensures you get root package, \n",
+    "            # not just imported function\n",
+    "            name = val.__name__.split(\".\")[0]\n",
+    "        elif isinstance(val, type):\n",
+    "            name = val.__module__.split(\".\")[0]\n",
+    "        # Some packages are weird and have different\n",
+    "        # imported names vs. system/pip names. Unfortunately,\n",
+    "        # there is no systematic way to get pip names from\n",
+    "        # a package's imported name. You'll have to add\n",
+    "        # exceptions to this list manually!\n",
+    "        poorly_named_packages = {\n",
+    "            \"sklearn\": \"scikit-learn\"\n",
+    "        }\n",
+    "        if name in poorly_named_packages.keys():\n",
+    "            name = poorly_named_packages[name]\n",
+    "        yield name.lower()\n",
+    "imports = list(set(get_imports()))\n",
+    "\n",
+    "# The only way I found to get the version of the root package\n",
+    "# from only the name of the package is to cross-check the names \n",
+    "# of installed packages vs. imported packages\n",
+    "modules = []\n",
+    "for m in sys.builtin_module_names:\n",
+    "    if m.lower() in imports and m !='builtins':\n",
+    "        modules.append((m,'Python BuiltIn'))\n",
+    "        imports.remove(m.lower())\n",
+    "\n",
+    "for m in pkg_resources.working_set:\n",
+    "    if m.project_name.lower() in imports and m.project_name!=\"pip\":\n",
+    "        modules.append((m.project_name, m.version))\n",
+    "        imports.remove(m.project_name.lower())\n",
+    "\n",
+    "for m in sys.modules:\n",
+    "    if m.lower() in imports and m !='builtins':\n",
+    "        modules.append((m,'unknown'))\n",
+    "\n",
+    "# print('System=='+platform.system()+' '+platform.release()+'; Version=='+platform.version())\n",
+    "for r in modules:\n",
+    "    print(\"{}=={}\".format(*r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -913,7 +994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "pycharm": {
    "stem_cell": {
