--- a/examples/how_to_galleries/core_guides/GeneSet_Comparison.ipynb
+++ b/examples/how_to_galleries/core_guides/GeneSet_Comparison.ipynb
@@ -2470,7 +2470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts, treatment = gsf.get_gem_data(combined_gsc, annotation_variables=\"Treatment\")\n",
+    "counts, treatment = gsf.get_gem_data(combined_gsc, annotation_variables=[\"Treatment\"])\n",
     "\n",
     "x_train, x_test, y_train, y_test = model_selection.train_test_split(counts, treatment)\n",
     "\n",
@@ -2601,15 +2601,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.1"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
-    "source": []
-   }
   }
  },
  "nbformat": 4,
