--- a/examples/how_to_galleries/core_guides/GeneSet_Comparison.ipynb
+++ b/examples/how_to_galleries/core_guides/GeneSet_Comparison.ipynb
@@ -2434,7 +2434,7 @@
     "\n",
     "for collection in [\"Boruta_Treatment\", \"deseq2_treatment\"]:\n",
     "    \n",
-    "    counts, treatment = gsf.get_gem_data(combined_gsc, selected_gene_sets=[collection], annotation_variables=\"Treatment\")\n",
+    "    counts, treatment = gsf.get_gem_data(combined_gsc, selected_gene_sets=[collection], annotation_variables=[\"Treatment\"])\n",
     "    \n",
     "    x_train, x_test, y_train, y_test = model_selection.train_test_split(counts, treatment)\n",
     "    \n",
