--- a/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
+++ b/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
@@ -24,9 +24,11 @@
     "or\n",
     "\n",
     "+ Installing the [OSF CLI utility](https://osfclient.readthedocs.io/en/latest/index.html) and clone to a directory:\n",
+    "\n",
     "    ```bash\n",
     "    osf -p rbhfz clone ~/GSForge_demo_data\n",
     "    ```\n",
+    "    \n",
     "    \n",
     "The paths used in this example assume the second method was used."
    ]
@@ -282,68 +284,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Add gene annotations***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_csv(GFF3_PATH, sep=\"\\t\", comment=\"#\",\n",
-    "             names=['seqname', 'source', 'feature', 'start', 'end',\n",
-    "                    'score', 'strand', 'frame', 'attribute']).head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_gff3_gene_lengths(gff3_file):\n",
-    "    \"\"\"A custom function to extract gene lengths.\"\"\"\n",
-    "    df = pd.read_csv(gff3_file, sep=\"\\t\", comment=\"#\",\n",
-    "                     names=['seqname', 'source', 'feature', 'start', 'end',\n",
-    "                            'score', 'strand', 'frame', 'attribute'])\n",
-    "    gene_ids = df[\"attribute\"].str.extract(r\"ID=(\\w+)\")\n",
-    "    df = df[gene_ids.notna().values]\n",
-    "    df['Gene'] = gene_ids\n",
-    "    df = df.drop_duplicates(\"Gene\")\n",
-    "    df = df.set_index(\"Gene\")\n",
-    "    return df[\"end\"] - df[\"start\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Because gene_lengths is already (hopefully) indexed correctly, it is trivial to incorporate into our AnnotatedGEM."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_lengths = extract_gff3_gene_lengths(GFF3_PATH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agem.data[\"lengths\"] = gene_lengths"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Save the `AnnotatedGEM`"
    ]
   },
@@ -353,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agem.save(AGEM_PATH)"
+    "# agem.save(AGEM_PATH)"
    ]
   },
   {
