--- a/examples/how_to_galleries/core_guides/06-GeneSet_Comparison.ipynb
+++ b/examples/how_to_galleries/core_guides/06-GeneSet_Comparison.ipynb
@@ -64,10 +64,10 @@
    "source": [
     "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage\")).expanduser()\n",
     "HYDRO_GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hydro_raw.nc\")\n",
-    "\n",
     "LIT_DGE_GSC_PATH = OSF_PATH.joinpath(\"Collections\", \"literature\", \"DGE\")\n",
     "LIT_TF_PATH = OSF_PATH.joinpath(\"Collections\", \"literature\", \"TF\")\n",
     "BORUTA_GSC_PATH = OSF_PATH.joinpath(\"Collections\", \"boruta\")\n",
+    "NF_BORUTA = OSF_PATH.joinpath(\"Collections\", \"nf_boruta\")\n",
     "\n",
     "assert HYDRO_GEM_PATH.exists()"
    ]
@@ -102,28 +102,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "lit_dge_coll = gsf.GeneSetCollection.from_folder(gem=agem, target_dir=LIT_DGE_GSC_PATH, name=\"Literature DGE\")\n",
-    "lit_dge_coll"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "lit_tf_coll = gsf.GeneSetCollection.from_folder(gem=agem, target_dir=LIT_TF_PATH, name=\"Literature TF\")\n",
-    "lit_tf_coll"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "boruta_gsc = gsf.GeneSetCollection.from_folder(gem=agem, target_dir=BORUTA_GSC_PATH, name=\"Boruta Results\")\n",
-    "boruta_gsc"
+    "boruta_nf_gsc = gsf.GeneSetCollection.from_folder(gem=agem, target_dir=NF_BORUTA, name=\"Boruta Results\")\n",
+    "tf_geneset = gsf.GeneSet.from_GeneSets(*list(lit_tf_coll.gene_sets.values()), name='transcription factors')"
    ]
   },
   {
@@ -157,10 +141,7 @@
    "source": [
     "combined_gsc = gsf.GeneSetCollection(gem=agem, gene_sets={**boruta_gsc.gene_sets, \n",
     "                                                          **lit_dge_coll.gene_sets,\n",
-    "#                                                           'transcription factors': tf_geneset\n",
-    "                                                         }\n",
-    "                                    )\n",
-    "combined_gsc"
+    "                                                          'transcription factors': tf_geneset})"
    ]
   },
   {
@@ -169,6 +150,22 @@
    "source": [
     "### View Collection Overlaps"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gsf.plots.collections.UpsetPlotInterface(combined_gsc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
