--- a/examples/plot_gallery/GeneSet_Overlap_Heatmaps.ipynb
+++ b/examples/plot_gallery/GeneSet_Overlap_Heatmaps.ipynb
@@ -34,6 +34,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -117,9 +118,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -131,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
