prep for release tag

--- a/examples/tutorials/walkthroughs/oryza_sativa/04-GeneSets_from_Literature.ipynb
+++ b/examples/tutorials/walkthroughs/oryza_sativa/04-GeneSets_from_Literature.ipynb
@@ -1548,13 +1548,10 @@
     }
    ],
    "source": [
+    "import holoviews as hv\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import xarray as xr\n",
-    "\n",
-    "import holoviews as hv\n",
     "hv.extension(\"bokeh\")\n",
-    "%matplotlib inline\n",
     "\n",
     "import GSForge as gsf"
    ]
@@ -1582,7 +1579,7 @@
    "outputs": [],
    "source": [
     "# OS-independent path management.\n",
-    "from os import fspath, environ\n",
+    "from os import  environ\n",
     "from pathlib import Path"
    ]
   },
@@ -1593,8 +1590,8 @@
    "outputs": [],
    "source": [
     "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage\")).expanduser()\n",
-    "SI_FILE_1_PATH = OSF_PATH.joinpath('raw_annotation_data', 'TPC2016-00158-LSBR2_Supplemental_File_1.csv')\n",
-    "SI_FILE_5_PATH = OSF_PATH.joinpath('raw_annotation_data', 'TPC2016-00158-LSBR2_Supplemental_File_5.txt')\n",
+    "SI_FILE_1_PATH = OSF_PATH.joinpath('GEMmaker_GEMs', 'raw_annotation_data', 'TPC2016-00158-LSBR2_Supplemental_File_1.csv')\n",
+    "SI_FILE_5_PATH = OSF_PATH.joinpath('GEMmaker_GEMs', 'raw_annotation_data', 'TPC2016-00158-LSBR2_Supplemental_File_5.txt')\n",
     "HYDRO_GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hydro_raw.nc\")\n",
     "\n",
     "LITERATURE_COLL_PATH = OSF_PATH.joinpath('Collections', 'literature')"
