--- a/examples/tutorials/walkthroughs/R_integration_guides/DESeq2_GeneSets.ipynb
+++ b/examples/tutorials/walkthroughs/R_integration_guides/DESeq2_GeneSets.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Creating DESeq2 GeneSets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*This notebook covers how to run and load a basic `DESeq2` DEG result as a `GSForge.GeneSet`.*\n",
     "\n",
     "---"
@@ -27,6 +34,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -330,16 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
-    "source": []
-   }
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
