--- a/examples/tutorials/walkthroughs/R_integration_guides/EdgeR_GeneSets.ipynb
+++ b/examples/tutorials/walkthroughs/R_integration_guides/EdgeR_GeneSets.ipynb
@@ -2,9 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# edgeR GeneSet Creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Plotting Guide Setup***"
+    "*Under construction*\n",
+    "\n",
+    "This notebook covers how to integrate DGE results from the `EdgeR` package into GSForge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Setting up the notebook***"
    ]
   },
   {
@@ -14,26 +34,26 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import GSForge as gsf\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
-    "\n",
     "import holoviews as hv\n",
-    "hv.extension('bokeh')\n",
-    "# hv.extension('bokeh', 'matplotlib')\n",
     "\n",
-    "import GSForge as gsf"
+    "hv.extension(\"bokeh\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Declare used paths***"
+    "***Declare paths used***"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -44,9 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "# OS-independent path management.\n",
-    "from os import fspath, environ\n",
-    "from pathlib import Path"
+    "## EdgeR Input Expectations"
    ]
   },
   {
@@ -54,18 +72,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data\")).expanduser()\n",
-    "AGEM_PATH = OSF_PATH.joinpath(\"osfstorage\", \"rice.nc\")\n",
-    "DEG_COLL_PATH = OSF_PATH.joinpath(\"osfstorage\", \"DEG_gene_sets\")\n",
-    "assert AGEM_PATH.exists()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Load an `AnnotatedGEM`***"
+    "## Providing a Design Array"
    ]
   },
   {
@@ -73,25 +86,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "agem = gsf.AnnotatedGEM(AGEM_PATH)\n",
-    "agem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agem.data"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### View Annotation Group Covariance"
+    "## Providing Contrasts"
    ]
   },
   {
@@ -99,19 +100,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "gsf.plots.gem.GroupedGeneCovariance(\n",
-    "    agem, group_variable=\"Treatment\", \n",
-    "    x_group_label=\"CONTROL\", y_group_label=\"HEAT\",\n",
-    "    count_transform=lambda counts: np.log10(counts.where(counts > 0)))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -123,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
