--- a/examples/tutorials/walkthroughs/oryza_sativa/01-AnnotatedGEM_from_pandas.ipynb
+++ b/examples/tutorials/walkthroughs/oryza_sativa/01-AnnotatedGEM_from_pandas.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating an AnnotatedGEM from Text Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "This notebook describes how to create and save an `AnnotatedGEM` object from separate count and label text files.\n",
     "\n",
     "A count matrix and an annotation table are often created as separate text files.\n",
@@ -34,7 +27,11 @@
     "    \n",
     "    **Linux**\n",
     "    ```bash\n",
+    "    # To clone the entire osf project:\n",
     "    osf -p rbhfz clone ~/GSForge_demo_data\n",
+    "    \n",
+    "    # To pull the minimum number of files to complete the examples:\n",
+    "    osf \n",
     "    ```\n",
     "  \n",
     "    \n",
@@ -64,6 +61,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "import GSForge as gsf"
    ]
   },
@@ -90,7 +88,7 @@
    "outputs": [],
    "source": [
     "# OS-independent path management.\n",
-    "from os import fspath, environ\n",
+    "from os import  environ\n",
     "from pathlib import Path"
    ]
   },
@@ -174,7 +172,7 @@
    "outputs": [],
    "source": [
     "RAW_COUNT_PATH = OSF_PATH.joinpath(\"GEMmaker_GEMs\", \"Osativa_heat_drought_PRJNA301554.GEM.raw.txt\")\n",
-    "HYDRO_LABEL_PATH = OSF_PATH.joinpath(\"raw_annotation_data\", \"PRJNA301554.hydroponic.annotations.txt\")"
+    "HYDRO_LABEL_PATH = OSF_PATH.joinpath(\"raw_annotation_data\", \"GEMmaker_GEMs\", \"PRJNA301554.hydroponic.annotations.txt\")"
    ]
   },
   {
@@ -2319,13 +2317,6 @@
     ")\n",
     "agem"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From here you are ready to..."
-   ]
   }
  ],
  "metadata": {
@@ -2345,15 +2336,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
-    "source": []
-   }
   }
  },
  "nbformat": 4,
