--- a/examples/tutorials/walkthroughs/oryza_sativa/02-Adding_and_Using_Normalizations.ipynb
+++ b/examples/tutorials/walkthroughs/oryza_sativa/02-Adding_and_Using_Normalizations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Saving Count Normalizations to `AnnotatedGEM`s"
+    "# Adding and using Normalizations"
    ]
   },
   {
@@ -1551,14 +1551,12 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import GSForge as gsf\n",
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import xarray as xr\n",
-    "import sklearn.preprocessing\n",
     "import holoviews as hv\n",
+    "import pandas as pd\n",
+    "import sklearn.preprocessing\n",
+    "import xarray as xr\n",
+    "\n",
+    "import GSForge as gsf\n",
     "\n",
     "hv.extension(\"bokeh\")"
    ]
@@ -1586,7 +1584,7 @@
    "outputs": [],
    "source": [
     "# OS-independent path management.\n",
-    "from os import fspath, environ\n",
+    "from os import  environ\n",
     "from pathlib import Path"
    ]
   },
@@ -3575,15 +3573,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
-    "source": []
-   }
   }
  },
  "nbformat": 4,
