--- a/examples/tutorials/walkthroughs/oryza_sativa/06-GeneSet_Comparison.ipynb
+++ b/examples/tutorials/walkthroughs/oryza_sativa/06-GeneSet_Comparison.ipynb
@@ -4,25 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# GeneSet Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***Setting up the notebook***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'GSForge'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-1-46ad63757dc8>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0msklearn\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mensemble\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mRandomForestClassifier\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 5\u001B[0;31m \u001B[0;32mimport\u001B[0m \u001B[0mGSForge\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mgsf\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      6\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[0mhv\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mextension\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"bokeh\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'GSForge'"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
     "import holoviews as hv\n",
-    "import upsetplot\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import model_selection\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "import GSForge as gsf\n",
     "\n",
@@ -52,7 +68,7 @@
    "outputs": [],
    "source": [
     "# OS-independent path management.\n",
-    "from os import fspath, environ\n",
+    "from os import  environ\n",
     "from pathlib import Path"
    ]
   },
@@ -180,15 +196,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "upsetplot.UpSet(upsetplot.data.from_contents(combined_gsc.as_dict()), orientation='horizontal', subset_size='count')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -298,9 +305,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "gsfenv",
    "language": "python",
-   "name": "python3"
+   "name": "gsfenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -312,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
