minor fixes, travis_dev

--- a/examples/About.ipynb
+++ b/examples/About.ipynb
@@ -11,7 +11,7 @@
     "## About GSForge\n",
     "\n",
     "*GSForge* helps manage and compare gene (feature) selection methods for RNA-Seq data.\n",
-    "It provides a framework of tools that assist in the collection, management and comparisson of feature selection results.\n",
+    "It provides a framework of tools that assist in the collection, management and comparison of feature selection results.\n",
     "\n",
     "---"
    ]
@@ -69,15 +69,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
-    "source": []
-   }
   }
  },
  "nbformat": 4,
