docs updated, travis_dev

--- a/docs/source/reference_examples/plot_gallery/UMAP_Embeddings.ipynb
+++ b/docs/source/reference_examples/plot_gallery/UMAP_Embeddings.ipynb
@@ -1586,8 +1586,6 @@
     "from os import  environ\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import xarray as xr\n",
     "import umap\n",
     "import umap.plot\n",
     "import GSForge as gsf\n",
@@ -1597,7 +1595,7 @@
     "hv.extension(\"bokeh\")\n",
     "\n",
     "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage/oryza_sativa\")).expanduser()\n",
-    "HYDRO_NORMED_GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hydro_normed.nc\")"
+    "NORMED_GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hydro_hisat2_normed.nc\")"
    ]
   },
   {
@@ -1622,7 +1620,7 @@
     }
    ],
    "source": [
-    "agem = gsf.AnnotatedGEM(HYDRO_NORMED_GEM_PATH)\n",
+    "agem = gsf.AnnotatedGEM(NORMED_GEM_PATH)\n",
     "agem"
    ]
   },
