--- a/docs/source/walkthroughs/oryza_sativa/04-GeneSets_from_Literature.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/04-GeneSets_from_Literature.ipynb
@@ -77,7 +77,7 @@
     "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage/oryza_sativa\")).expanduser()\n",
     "SI_FILE_1_PATH = OSF_PATH.joinpath('GEMmakerGEMs', 'raw_annotation_data', 'TPC2016-00158-LSBR2_Supplemental_File_1.csv')\n",
     "SI_FILE_5_PATH = OSF_PATH.joinpath('GEMmakerGEMs', 'raw_annotation_data', 'TPC2016-00158-LSBR2_Supplemental_File_5.txt')\n",
-    "GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_raw.nc\")\n",
+    "GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hisat2_raw.nc\")\n",
     "LITERATURE_COLL_PATH = OSF_PATH.joinpath('GeneSetCollections', 'literature')"
    ]
   },
@@ -171,45 +171,8 @@
    "source": [
     "## Wrangle Data and Create Collections\n",
     "\n",
-    "At the very least we need a name and a list of genes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b3f8c16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# genes = agem.data.Gene.to_series()\n",
-    "# genes[genes.str.contains('ChrSy.fgenesh.*.37')]  # ChrSy.fgenesh.gene.37"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a223d37e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mappings = {'ChrSy.fgenesh.gene.37': 'ChrSy.fgenesh.mRNA.37'}\n",
-    "\n",
-    "\n",
-    "# def parse_gene_splices(gene, gene_index: pd.Series, replacement_mappings=mappings):\n",
-    "#     \"\"\"Convert to an existing splice site, if possible.\"\"\"\n",
-    "#     if gene in gene_index:\n",
-    "#         return gene\n",
-    "    \n",
-    "#     for splice_site in range(1, 4):\n",
-    "#         gene_splice = f'{gene}.{splice_site}'\n",
-    "#         if gene_splice in gene_index:\n",
-    "#             return gene_splice\n",
-    "        \n",
-    "#     if replacement_mappings is not None:\n",
-    "#         if replacement_mappings.get(gene):\n",
-    "#             return replacement_mappings.get(gene)\n",
-    "        \n",
-    "#     return gene"
+    "At the very least we need a name and a list of genes.\n",
+    "\n"
    ]
   },
   {
@@ -223,9 +186,6 @@
     "\n",
     "for col in si1_df.columns:\n",
     "    genes = si1_df[si1_df[col] > 0].index.values\n",
-    "#     genes = np.asarray([parse_gene_splices(gene, agem.data.Gene.to_series())\n",
-    "#                         for gene in genes])\n",
-    "    \n",
     "    diff = np.setdiff1d(genes, agem.data.Gene.values)\n",
     "    if diff.shape[0] > 0:\n",
     "        print(diff)\n",
@@ -247,8 +207,6 @@
     "\n",
     "for name, values in si5_df.iterrows():\n",
     "    genes = np.asarray(values.values[0].split(','))\n",
-    "    genes = np.asarray([parse_gene_splices(gene, agem.data.Gene.to_series())\n",
-    "                        for gene in genes])\n",
     "    lit_tf_coll[name] = gsf.GeneSet.from_gene_array(genes, name=name)\n",
     "    \n",
     "    diff = np.setdiff1d(genes, agem.data.Gene.values)\n",
