--- a/docs/source/walkthroughs/oryza_sativa/07-Examaining_Geneset_Overlaps.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/07-Examaining_Geneset_Overlaps.ipynb
@@ -1602,7 +1602,7 @@
    "outputs": [],
    "source": [
     "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage/oryza_sativa\")).expanduser()\n",
-    "GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_raw.nc\")\n",
+    "GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hisat2_raw.nc\")\n",
     "LIT_DGE_GSC_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"literature\", \"DGE\")\n",
     "LIT_TF_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"literature\", \"TF\")\n",
     "BORUTA_GSC_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"workflow_boruta\")"
