doc updates, travis_dev

--- a/docs/source/walkthroughs/oryza_sativa/02-Adding_and_Using_Normalizations.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/02-Adding_and_Using_Normalizations.ipynb
@@ -5,7 +5,7 @@
    "id": "c3602f40",
    "metadata": {},
    "source": [
-    "## 02 Saving Normalizations to AnnotatedGEMs\n",
+    "# 02 Saving Normalizations to AnnotatedGEMs\n",
     "\n",
     "This notebook is a *how-to* guide on normalizing gene expression matrices using GSForge.\n",
     "It does not cover considerations as to which normalization should be preformed.\n",
@@ -1746,7 +1746,7 @@
    "id": "6e4739e7",
    "metadata": {},
    "source": [
-    "### Adding Normalizations to an AnnotatedGEM"
+    "## Adding Normalizations to an AnnotatedGEM"
    ]
   },
   {
@@ -3028,7 +3028,7 @@
    "id": "2c1fe298",
    "metadata": {},
    "source": [
-    "#### Normalizations from Scikit-Learn"
+    "### Normalizations from Scikit-Learn"
    ]
   },
   {
@@ -3724,7 +3724,7 @@
    "id": "0aa592ac",
    "metadata": {},
    "source": [
-    "### Save the AnnotatedGEM as a .netcdf file\n",
+    "## Save the AnnotatedGEM as a .netcdf file\n",
     "\n",
     "Recall that `.nc` files cannot be overwritten, nor have variables added to them. \n",
     "So we either need to delete and save the file with the same name, or save as a new file."
