Updated documentation. Local docs building via docker.

--- a/docs/source/walkthroughs/oryza_sativa/01-AnnotatedGEM_from_pandas.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/01-AnnotatedGEM_from_pandas.ipynb
@@ -83,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage/oryza_sativa\")).expanduser()\n",
+    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/\")).expanduser().joinpath(\"osfstorage\", \"oryza_sativa\")\n",
     "RAW_COUNT_PATH = OSF_PATH.joinpath(\"GEMmakerGEMs\", \"rice_heat_drought.GEM.raw.txt\")\n",
     "HYDRO_LABEL_PATH = OSF_PATH.joinpath(\"GEMmakerGEMs\", \"raw_annotation_data\", \"PRJNA301554.hydroponic.annotations.txt\")"
    ]
