--- a/docs/source/walkthroughs/oryza_sativa/04-GeneSets_from_Literature.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/04-GeneSets_from_Literature.ipynb
@@ -1660,7 +1660,7 @@
    },
    "outputs": [],
    "source": [
-    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage/oryza_sativa\")).expanduser()\n",
+    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/\")).expanduser().joinpath(\"osfstorage\", \"oryza_sativa\")\n",
     "SI_FILE_1_PATH = OSF_PATH.joinpath('GEMmakerGEMs', 'raw_annotation_data', 'TPC2016-00158-LSBR2_Supplemental_File_1.csv')\n",
     "SI_FILE_5_PATH = OSF_PATH.joinpath('GEMmakerGEMs', 'raw_annotation_data', 'TPC2016-00158-LSBR2_Supplemental_File_5.txt')\n",
     "GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hisat2_raw.nc\")\n",
