--- a/docs/source/walkthroughs/oryza_sativa/07-Examaining_Geneset_Overlaps.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/07-Examaining_Geneset_Overlaps.ipynb
@@ -1615,7 +1615,7 @@
    },
    "outputs": [],
    "source": [
-    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage/oryza_sativa\")).expanduser()\n",
+    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/\")).expanduser().joinpath(\"osfstorage\", \"oryza_sativa\")\n",
     "GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hisat2_raw.nc\")\n",
     "LIT_DGE_GSC_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"literature\", \"DGE\")\n",
     "LIT_TF_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"literature\", \"TF\")\n",
