--- a/docs/source/walkthroughs/oryza_sativa/02-Adding_and_Using_Normalizations.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/02-Adding_and_Using_Normalizations.ipynb
@@ -1650,7 +1650,7 @@
    },
    "outputs": [],
    "source": [
-    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/osfstorage/oryza_sativa\")).expanduser()\n",
+    "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data/\")).expanduser().joinpath(\"osfstorage\", \"oryza_sativa\")\n",
     "GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hisat2_raw.nc\")\n",
     "TPM_GEM_PATH = OSF_PATH.joinpath(\"GEMmakerGEMs\", \"rice_heat_drought.GEM.TPM.txt\")"
    ]
