Refactored gene_support to get_support.

--- a/docs/source/walkthroughs/oryza_sativa/04-GeneSets_from_Literature.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/04-GeneSets_from_Literature.ipynb
@@ -2546,7 +2546,7 @@
     }
    ],
    "source": [
-    "lit_tf_coll['pred.group.8'].gene_support()"
+    "lit_tf_coll['pred.group.8'].get_support()"
    ]
   },
   {
