Prep master merge. travis_dev

--- a/docs/source/walkthroughs/oryza_sativa/01-AnnotatedGEM_from_pandas.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/01-AnnotatedGEM_from_pandas.ipynb
@@ -9,15 +9,12 @@
     "\n",
     "This notebook describes how to create and save an `AnnotatedGEM` object from separate count and label text files.\n",
     "\n",
-    "\n",
     "***Download the demo data***\n",
     "\n",
-    "A demo gene expression matrix and accompanying annotation text files are stored in a public [OSF](https://osf.io) project.\n",
+    "An expression matrix and accompanying annotation text files are available in a public [OSF](https://osf.io) project.\n",
     "You can download them by:\n",
     "+ Navigating to the [data repository on osf](https://osf.io/t3xpw/) and manually download them.\n",
-    "\n",
     "or\n",
-    "\n",
     "+ Installing the [OSF CLI utility](https://osfclient.readthedocs.io/en/latest/index.html) and clone to a directory:\n",
     "    \n",
     "    **Linux**\n",
@@ -31,9 +28,6 @@
     "    # To pull the minimum number of files to complete the examples:\n",
     "    osf \n",
     "    ```\n",
-    "  \n",
-    "    \n",
-    "The paths used in this example assume the second method was used.\n",
     "\n",
     "***Set up the notebook***"
    ]
@@ -119,7 +113,7 @@
    "id": "74af1f6b",
    "metadata": {},
    "source": [
-    "Finally, declare an path to which the created `.nc` file will saved."
+    "Finally, declare a path to save the created `.nc` file."
    ]
   },
   {
