--- a/docs/source/walkthroughs/oryza_sativa/07-Examaining_Geneset_Overlaps.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/07-Examaining_Geneset_Overlaps.ipynb
@@ -1619,7 +1619,7 @@
     "GEM_PATH = OSF_PATH.joinpath(\"AnnotatedGEMs\", \"oryza_sativa_hisat2_raw.nc\")\n",
     "LIT_DGE_GSC_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"literature\", \"DGE\")\n",
     "LIT_TF_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"literature\", \"TF\")\n",
-    "BORUTA_GSC_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"workflow_boruta\")"
+    "# BORUTA_GSC_PATH = OSF_PATH.joinpath(\"GeneSetCollections\", \"workflow_boruta\")"
    ]
   },
   {
@@ -1709,6 +1709,10 @@
    },
    "outputs": [],
    "source": [
+    "gene_sets={**lit_dge_coll.gene_sets, \n",
+    "           **boruta_gsc.gene_sets, \n",
+    "           'transcription factors': tf_geneset}\n",
+    "\n",
     "combined_gsc = gsf.GeneSetCollection(gem=agem, \n",
     "                                     gene_sets={**lit_dge_coll.gene_sets, \n",
     "                                                **boruta_gsc.gene_sets, \n",
