Updating main docs, fixing travis a bit.

--- a/docs/source/walkthroughs/oryza_sativa/02-Adding_and_Using_Normalizations.ipynb
+++ b/docs/source/walkthroughs/oryza_sativa/02-Adding_and_Using_Normalizations.ipynb
@@ -3118,9 +3118,7 @@
    "id": "6baec786",
    "metadata": {},
    "source": [
-    "### Using R to Normalize GEMs\n",
-    "\n",
-    "See TODO for more information and examples on interacting with R."
+    "### Using R to Normalize GEMs"
    ]
   },
   {
